@@ -4,6 +4,8 @@ examples/ex2.pl
 examples/ex3.pl
 images/ex3.png
 inc/Module/Install.pm
+inc/Module/Install/AuthorRequires.pm
+inc/Module/Install/AuthorTests.pm
 inc/Module/Install/Base.pm
 inc/Module/Install/Can.pm
 inc/Module/Install/Fetch.pm
@@ -22,11 +24,11 @@ Nanjing.pm
 README
 share/nanjing-map.xml
 SIGNATURE
-t/Map-Tube-Nanjing/00-use.t
-t/Map-Tube-Nanjing/01-version.t
-t/Map-Tube-Nanjing/02-pod_coverage.t
-t/Map-Tube-Nanjing/03-pod.t
-t/Map-Tube-Nanjing/04-map.t
-t/Map-Tube-Nanjing/05-get_shortest_route.t
-t/Map-Tube-Nanjing/06-name.t
-t/Map-Tube-Nanjing/07-xml.t
+t/Map-Tube-Nanjing/01-use.t
+t/Map-Tube-Nanjing/02-version.t
+t/Map-Tube-Nanjing/03-map.t
+t/Map-Tube-Nanjing/04-get_shortest_route.t
+t/Map-Tube-Nanjing/05-name.t
+t/Map-Tube-Nanjing/06-xml.t
+xt/Map-Tube-Nanjing/01-pod_coverage.t
+xt/Map-Tube-Nanjing/02-pod.t
