@@ -1,4 +1,5 @@
 0.03
+ - Move author tests to xt/ directory.
  - Rewrite SEE ALSO section to new style.
  - Update Module::Install to 1.16 version.
 
